--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,128 @@
-img {
-	width: 300px;
-	height: 300px;
+/*.navbar-fixed {
+    top: 0;
+    z-index: 100;
+    position: fixed;
+    width: 100%;
+}
+
+#nav_bar {
+    border: 0;
+    background-color: #202020;
+    border-radius: 0px;
+    margin-bottom: 0px;
+}*/
+
+.welcome-text {
+    margin-top: 30px;
+}
+
+.navbar-inverse {
+    padding-right: 2%;
+    margin-bottom: 2%;
+}
+
+h1 {
+    font-weight: bold;
+    margin: 0px;
+}
+
+.jumbotron
+{
+    padding: 7%;
+    margin : 0px;
+    background-image: url("../images/libbg.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+}
+
+.btn-addbook 
+{
+    margin-bottom: 10px;
+}
+
+.glyphicon 
+{ 
+    margin-right:5px; 
+}
+
+.thumbnail
+{
+    margin-bottom: 20px;
+    padding: 0px;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
+}
+
+.item.list-group-item
+{
+    float: none;
+    width: 70%;
+    background-color: #fff;
+    margin : auto;
+}
+.item.list-group-item:nth-of-type(odd):hover,.item.list-group-item:hover
+{
+    background: black;
+}
+
+.item.list-group-item .list-group-image
+{
+    margin-right: 10px;
+}
+.item.list-group-item .thumbnail
+{
+    margin-bottom: 0px;
+}
+.item.list-group-item .caption
+{
+    padding: 9px 9px 0px 9px;
+}
+.item.list-group-item:nth-of-type(odd)
+{
+    background: #eeeeee;
+}
+
+.item.list-group-item:before, .item.list-group-item:after
+{
+    display: table;
+    content: " ";
+}
+
+.item.list-group-item img
+{
+    float: left;
+}
+.item.list-group-item:after
+{
+    clear: both;
+}
+.list-group-item-text
+{
+    margin: 0 0 11px;
+}
+.centered {
+    margin: auto;
+    max-width: 60%;
+}
+
+.title-book {
+    margin-top: 0px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 400px;
+}
+
+footer {
+    height: 10vh;
+background-image: url("../images/libbg.jpg");
+    color: white;
+    text-align: center;
+    background-color: #262626;
 }
