--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 body{
     padding: 0px;
     margin: 0px;
-    background-image: url("../images/libbg.jpg");
+    background-image: url("../images/background.jpg");
     height: 100vh;
     background-position: center;
     background-size: cover;
