--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,6 @@
-/*.navbar-fixed {
-    top: 0;
-    z-index: 100;
-    position: fixed;
-    width: 100%;
+#fotoBuku {
+	height: 50%;
 }
-
-#nav_bar {
-    border: 0;
-    background-color: #202020;
-    border-radius: 0px;
-    margin-bottom: 0px;
-}*/
 
 .welcome-text {
     margin-top: 30px;
@@ -30,7 +20,7 @@ h1 {
 {
     padding: 7%;
     margin : 0px;
-    background-image: url("../images/libbg.jpg");
+    background-image: url("../images/background.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -121,7 +111,7 @@ h1 {
 
 footer {
     height: 10vh;
-background-image: url("../images/libbg.jpg");
+	background-image: url("../images/background.jpg");
     color: white;
     text-align: center;
     background-color: #262626;
