--- a/css/style.css
+++ b/css/style.css
@@ -255,6 +255,19 @@ footer .glyphicon {
   font-size: 24px;
 }
 
+/* .btn-bacaupload{
+  margin: 5px auto;
+} */
+
+@media (max-width: 768px) {
+  .btn-bacaupload{
+    margin: 10px auto;
+  }
+
+  .box-how-to-use{
+    margin: 40px auto;
+  }
+}
 .devices{
   margin: 50px auto;
 }
